servicemesh/hellogo-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
  name: hellogo-virtualservice
  namespace: demo
spec:
  gateways:
  - hellogo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hellogo
        port:
          number: 3000
        subset: v1
      weight: 90
    - destination:
        host: hellogo
        port:
          number: 3000
        subset: v2
      weight: 10
